--- a/src/app/panel/panel.component.html
+++ b/src/app/panel/panel.component.html
@@ -1,5 +1,5 @@
 <div style="width: 40%; display:inline-block">
-  <canvas id="canvas">{{ chart }}</canvas>
+  <canvas id="{{canvasId}}">{{ chart }}</canvas>
 </div>
 <div style="width: 30%; display:inline-block">
   <table>
